[package]
name = "httpsproxybackend"
version = "0.0.3"
description = "A proxy test"
authors = ["WannaR"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
serde_repr = "0.1"
url = { version = "2.3" }
reqwest = { version = "0.11", features = [ "json", "stream", "native-tls-vendored" ] }
quickcheck = "1.0.3"
futures-util = "0.3"
bytes = { version = "1", features = [ "serde" ] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1"
rand = "0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# http-api = [ "reqwest", "bytes" ]
# http-multipart = [ "reqwest/multipart" ]
# reqwest-client = [ "http-api" ]
# reqwest-native-tls-vendored = [ "native-tls-vendored" ]
# native-tls-vendored = [ "reqwest/native-tls-vendored" ]
